--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-bootstrap": "^1.0.0-beta.8",
     "react-burger-menu": "^2.6.5",
     "react-dom": "^16.8.3",
+    "react-number-format": "^4.4.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "styled-components": "^4.1.3"
